--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,5 +19,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: npm install
         run: npm install
-      - name: Run eslint
-        run: npm run lint
+      - name: Run next lint
+        run: next lint
