--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "sass": "^1.72.0"
   },
   "devDependencies": {
