--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "deploy": "firebase deploy --only hosting"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "next": "^14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.72.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.28",
+    "@types/react": "18.2.66",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
