--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "deploy": "firebase deploy --only hosting"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/material": "^5.15.14",
     "bootstrap": "^5.3.3",
     "next": "^14.1.3",
     "react": "^18",
