--- a/firebase.json
+++ b/firebase.json
@@ -5,20 +5,62 @@
     "trailingSlash": true,
     "rewrites": [
       {
-        "source": "**",
-        "destination": "**.html"
-      },
-      {
         "source": "/home/intro",
         "destination": "/home.html"
+      },
+
+      {
+        "source": "/logs",
+        "destination": "/logs.html"
+      },
+      {
+        "source": "/setting",
+        "destination": "/setting.html"
+      },
+
+      {
+        "source": "/auth/login",
+        "destination": "/auth/login.html"
+      },
+      {
+        "source": "/auth/profileForm",
+        "destination": "/auth/profileForm.html"
+      },
+      {
+        "source": "/auth/signup",
+        "destination": "/auth/signup.html"
+      },
+
+      {
+        "source": "/cosmetics/[id]",
+        "destination": "/cosmetics/[id].html"
+      },
+      {
+        "source": "/cosmetics/search",
+        "destination": "/cosmetics/search"
+      },
+      
+      {
+        "source": "/home/mypage",
+        "destination": "/home/mypage.html"
+      },
+
+      {
+        "source": "/logs/new",
+        "destination": "/logs/new.html"
+      },
+
+      {
+        "source": "/setting/edit_profile",
+        "destination": "/setting/edit_profile.html"
+      },
+      {
+        "source": "/setting/password",
+        "destination": "/setting/password.html"
       },
       {
         "source": "/setting/profile",
         "destination": "/setting/profile.html"
-      },
-      {
-        "destination": "/logs/[id].html",
-        "regex": "^/logs/([^/]+?)(?:/)?$"
       }
     ]
   }
