--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: fmt
+name: build
 
 on:
   pull_request:
@@ -19,5 +19,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: npm install
         run: npm install
-      - name: Run prettier
-        run: npx prettier -l .
+      - name: Run build
+        run: npm run build
