--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
   "devDependencies": {
     "@types/node": "20.11.28",
     "@types/react": "18.2.66",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1"
   }
 }
