--- a/firebase.json
+++ b/firebase.json
@@ -36,16 +36,14 @@
       },
 
       {
-        "source": "/cosmetics/[id]",
-        "regex": "^/post/([^/]+?)(?:/)?$",
-        "routeKeys": { "id": "id" },
-        "namedRegex": "^/cosmetics/(?<id>[^/]+?)(?:/)?$"
+        "destination": "/cosmetics/[id].html",
+        "regex": "^/cosmetics/([^/]+?)(?:/)?$"
       },
       {
         "source": "/cosmetics/search",
         "destination": "/cosmetics/search.html"
       },
-      
+
       {
         "source": "/home/mypage",
         "destination": "/home/mypage.html"
